When loading the configuration set active shortcut not the default shortcut

Otherwise hotkeys don't work

BUG: 337230
FIXED-IN: 5.1.1